<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:text="@string/send_sms_request"
        android:textAlignment="center"
        android:textSize="20sp"
        android:gravity="center_vertical"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alert_sms_no"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/no"
            android:backgroundTint="@color/base_color"/>

        <Button
            android:id="@+id/alert_sms_yes"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/yes"
            android:backgroundTint="@color/base_color"/>
    </LinearLayout>
</LinearLayout>
